--- a/site/public/dashboard/dashboardTemperatura.html
+++ b/site/public/dashboard/dashboardTemperatura.html
@@ -113,6 +113,7 @@
 
         <!-- Início do conteúdo principal da página -->
         <div class="container-fluid">
+          
 
           <div class="row row01">
             <!-- Segundo header da página -->
@@ -122,6 +123,83 @@
               </select>
             </div>
           </div>
+
+          <div class="row" style="display: flex; justify-content: center;">
+
+            <!-- Earnings (Monthly) Card Example -->
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiCpu">
+                <abbr id="abbrCpu" style="text-decoration: none;">
+                    <div class="card shadow h-100 py-2 pointer" id="cardCpu">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div
+                                        class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
+                                        Alertas da CPU</div>
+                                    <div class="h5 mb-0 font-weight-bolder text-gray-800"
+                                        id="situacaocpu"></div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-microchip fa-2x text-black-300"
+                                        id="iconeAlertasCpu"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </abbr>
+            </div>
+
+            <!-- Earnings (Monthly) Card Example -->
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiRam">
+                <abbr id="abbrRam" style="text-decoration: none;">
+                    <div class="card shadow h-100 py-2 pointer" id="cardMemo">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div
+                                        class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
+                                        Alertas de uso da RAM</div>
+                                    <div class="h5 mb-0 font-weight-bolder text-gray-800"
+                                        id="situacaoram"></div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-memory fa-2x text-black-300"
+                                        id="iconeAlertasMemo"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </abbr>
+            </div>
+
+            <!-- Earnings (Monthly) Card Example -->
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiDisco">
+                <abbr id="abbrDisco" style="text-decoration: none;">
+                    <div class="card shadow h-100 py-2 pointer" id="cardDisco">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div
+                                        class="text-xs font-weight-bolder text-cold text-uppercase mb-1">
+                                        Alertas de uso do disco
+                                    </div>
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col-auto">
+                                            <div class="h5 mb-0 mr-3 font-weight-bolder text-gray-800"
+                                                id="situacaoDisco"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-compact-disc fa-2x text-black-300"
+                                        id="iconeAlertasDisco"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </abbr>
+            </div>
+        
 
           <!-- Primeira linha de gráficos -->
           <div class="row">
@@ -166,45 +244,14 @@
                   </h6>
                 </div>
                 <div class="card-body card_recomendacao" id="recomendacoesHTML" style="color: #000">
-                  <p id="correlacaoCPU" class="correlacao">CPU: </p>
+                  <p id="correlacaoCPU" class="correlacao">CPU: </p>  
                   <p id="correlacaoMemoria" class="correlacao">Memoria: </p>
                   <p id="correlacaoDisco" class="correlacao">Disco:</p>
                 </div>
               </div>
             </div>
             <!-- Div para o gráfico de linhas -->
-            <div class="col-xl-7 col-lg-7">
-              <div class="card shadow mb-4 grafico-de-linha">
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">
-                    Temperatura x Memória (%)
-                  </h6>
-                </div>
-                <!-- Div para o gráfico de linha -->
-                <div class="card-body card-body-grafico">
-                  <div class="chart-area" id="chartArea">
-                    <canvas id="graficoMem"></canvas>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Div para o gráfico de linhas -->
-            <div class="col-xl-7 col-lg-7">
-              <div class="card shadow mb-4 grafico-de-linha">
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">
-                    Temperatura x HDD (%)
-                  </h6>
-                </div>
-                <!-- Div para o gráfico de linha -->
-                <div class="card-body card-body-grafico">
-                  <div class="chart-area" id="chartArea">
-                    <canvas id="graficoHd"></canvas>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
 
 
