--- a/site/public/dashboard/dashboardProcessos.html
+++ b/site/public/dashboard/dashboardProcessos.html
@@ -81,12 +81,13 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-server"></i>
-                    <span>Servidores</span>
+                    <span>Complementos: </span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="consulta.html">Consultar</a>
+                        <a class="collapse-item" href="dashboardAnalista.html">Geral</a>
+                        <a class="collapse-item" href="dashboardTemperatura.html">Temperatura</a>
                     </div>
                 </div>
             </li>
