Adição do individal - isa

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -88,6 +88,20 @@
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a href="./dashGerenteIsa.html" class="nav-link">
+                    <i class="fas fa-fw fa-tachometer-alt text-light"></i>
+                    <span class="text-light">Previsão de consumo</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="./dashboardPrevisaoQueda.html" class="nav-link">
+                    <i class="fas fa-fw fa-tachometer-alt text-light"></i>
+                    <span class="text-light">Análise de queda</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
