--- a/site/public/dashboard/dashboardPrevisaoQueda.html
+++ b/site/public/dashboard/dashboardPrevisaoQueda.html
@@ -81,7 +81,26 @@
             <div class="sidebar-heading text-light font-weight-bolder">
                 Gerenciamento
             </div>
-            
+            <li class="nav-item">
+                <a href="./dashboardFaturamentoPerdido.html" class="nav-link">
+                    <i class="fas fa-fw fa-dollar-sign text-light"></i>
+                    <span class="text-light">Análise Monetária</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="./dashGerenteIsa.html" class="nav-link">
+                    <i class="fas fa-fw fa-tachometer-alt text-light"></i>
+                    <span class="text-light">Previsão de consumo</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="./dashboardPrevisaoQueda.html" class="nav-link">
+                    <i class="fas fa-fw fa-tachometer-alt text-light"></i>
+                    <span class="text-light">Previsão de queda</span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a href="./dashboardFaturamentoPerdido.html" class="nav-link">
                     <i class="fas fa-fw fa-dollar-sign text-light"></i>
