--- a/site/public/dashboard/dashGerenteIsa.html
+++ b/site/public/dashboard/dashGerenteIsa.html
@@ -496,7 +496,7 @@
                 plugins: {
                     title: {
                         display: true,
-                        text: 'Chart.js Stacked Line/Bar Chart'
+                        text: 'Comparativo do consumo do servidor ao longo do ano, com base nos calendários E-Comerce'
                     }
                 },
                 scales: {
