erro de importacao

--- a/site/public/dashboard/dashboardTemperatura.html
+++ b/site/public/dashboard/dashboardTemperatura.html
@@ -314,7 +314,7 @@
 <!-- Aqui a função defer não se faz tão necessária, mas é bom ter -->
 <script src="vendor/chart.js/Chart.min.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script type="module" src="../js/dashboardTemperatura.js" defer></script>
+<script src="../js/dashboardTemperatura.js" defer></script>
 <script src="js/sb-admin-2.min.js" defer></script>
 <script src="vendor/jquery/jquery.min.js" defer></script>
 <script src="vendor/jquery-easing/jquery.easing.min.js" defer></script>
