--- a/site/public/dashboard/dashboardTemperatura.html
+++ b/site/public/dashboard/dashboardTemperatura.html
@@ -150,7 +150,7 @@
                     </div>
                 </abbr>
             </div> -->
-            <div class="col-xl-3 col-md-6 mb-4" id="kpiCpu" onchange="selecionarGrafico(0)">
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiCpu" onclick="selecionarGrafico(0)">
                 <abbr id="abbrCpu" style="text-decoration: none;">
                     <div class="card shadow h-100 py-2 pointer" id="cardCpu">
                         <div class="card-body">
@@ -173,7 +173,7 @@
             </div>
 
             <!-- Earnings (Monthly) Card Example -->
-            <div class="col-xl-3 col-md-6 mb-4" id="kpiRam" onchange="selecionarGrafico(1)">
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiRam" onclick="selecionarGrafico(1)">
             <abbr id="abbrRam" style="text-decoration: none;">
                     <div class="card shadow h-100 py-2 pointer" id="cardMemo">
                         <div class="card-body">
@@ -196,7 +196,7 @@
             </div>
 
             <!-- Earnings (Monthly) Card Example -->
-            <div class="col-xl-3 col-md-6 mb-4" id="kpiDisco" onchange="selecionarGrafico(2)">
+            <div class="col-xl-3 col-md-6 mb-4" id="kpiDisco" onclick="selecionarGrafico(2)">
                 <abbr id="abbrDisco" style="text-decoration: none;">
                     <div class="card shadow h-100 py-2 pointer" id="cardDisco">
                         <div class="card-body">
